--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">DeadLine</string>
     <string name="action_settings">Settings</string>
+    <string name="new_task">New Task</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="new_task_title">Task Title</string>
+    <string name="description">Description</string>
+    <string name="dueDate">Do until</string>
+    <string name="priority">Priority</string>
 </resources>
