--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="new_task">New Task</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="new_task_title">Task Title</string>
+    <string name="new_task_title">Title</string>
     <string name="description">Description</string>
     <string name="dueDate">Do until</string>
     <string name="priority">Priority</string>
+    <string name="saveToCalendar">Save To Calendar</string>
 </resources>
